# obsidian-brain

./: ## DocumentationUntitled 2.md  .gitignore  .gitmodules  00_Home.md  AGENTS.md  AI_CHAMPIONSHIP.txt  AUDIT_REPORT_GODMODE.md  B1_RESEARCH.md  BACKUP_PROFITABLE_500_TO_700.md  BACKUP_PROFITABLE_SETUP_JAN27.md  BAYESIAN_SWEEP_RESULTS.txt  CHAMPION.md  CHAMPION_MODE.md  CHANGELOG.md  CLAUDE.md  D6_DRYRUN.txt  D6_DRYRUN_6FILTER.txt  D6_DRYRUN_7FILTER.txt  D6_DRYRUN_NATURE.txt  D6_DRYRUN_NATURE_V2.txt  D6_DRYRUN_ROBUST.txt  D6_DRYRUN_ROBUST_V2.txt  D6_DRYRUN_STATUS.md  D6_FINAL_BASE.txt  D6_FINAL_NATURE.txt  D6_FINAL_ROBUST.txt  D6_FINAL_VERDICT.md  D6_TRIGGERED.flag  DEEP_EDGE_RESULTS.md  ENSEMBLE_SWEEP_RESULTS.txt  FINAL_VERIFICATION_3ACCOUNT_LIVE.md  GODMODE_UPGRADE_MASTERPLAN.md  GODSMODE_RESULTS.md  GODS_LEVEL_PROMPTS.py  God of Gods Level Trading Crypto Prompt.md  L99_OPERATIONS.md  MA_STRATEGY.md  MR_ENSEMBLE_RESULTS.md  MULTI_TOKEN_RESULTS.md  Mercury AI Assistant - Project Hub.md  (+157 more)
tournament-ai-bot-/: README.md  modes.py  pull_all_pairs.py  pull_gateio_ohlcv.py  pyproject.toml  requirements.txt  run_live_bot.py  run_paper_bot.py
tournament-ai-bot-/analytics/: performance.py
tournament-ai-bot-/core/: engine.py  event_bus.py  scheduler.py
tournament-ai-bot-/data/: backtest_feed.py  live_feed.py
tournament-ai-bot-/engine/: config.py  data_feed.py  execution_engine.py  paper_engine.py  performance_tracker.py  portfolio_manager.py  risk_manager.py  signal_generator.py  state_detector.py  strategy.py
tournament-ai-bot-/execution/: live_execution.py  (+1 more)
(+731 files in other folders)
