[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tournament-ai-bot"
version = "0.1.0"
description = "Tournament-grade autonomous spot trading engine for Gate.io USDT markets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tournament*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
